--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "node": "12.x.x"
   },
   "scripts": {
+    "start": "ts-node src/ts/index.ts",
     "test:lint": "eslint -c .eslintrc.yml --ext .js,.ts --max-warnings=0 src/ts",
     "test": "yarn test:lint && jest -c test/jest.config.ts --forceExit --no-cache --coverage --verbose --detectOpenHandles"
   },
   "devDependencies": {
+    "@relmify/jest-fp-ts": "^1.1.1",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
@@ -20,6 +22,7 @@
     "eslint-plugin-functional": "^3.2.1",
     "eslint-plugin-import": "^2.22.1",
     "fp-ts": "^2.9.5",
+    "io-ts": "^2.2.15",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "ts-jest": "^26.5.2",
